Fixing group DM and emoji boxes not blurring

--- a/AeroCord.css
+++ b/AeroCord.css
@@ -1,4 +1,3 @@
-
 /* End https://www.cursors-4u.com */
 
 :root {
@@ -25,6 +24,7 @@
   background-image: url('https://arjun.needs-to-s.top/5RVeMbj.png') !important;
   background-image: url('https://arjun.needs-to-s.top/6s1hqaA.png') !important;
 }
+
 .root__46d4f {
   background: rgba(106, 151, 255, 0.526);
   box-shadow: 0 4px 30px rgba(0, 255, 238, 0.1);
@@ -45,7 +45,6 @@
   backdrop-filter: blur(10px);
   box-shadow: 0 4px 30px rgba(0, 255, 238, 0.1);
   box-shadow: inset 0px 0px 15px rgba(148, 246, 255, 0.2);
-
 }
 
 .contentRegionScroller__9ae20 {
@@ -62,8 +61,9 @@
 
 /* ----- */
 
-
-
+.autocomplete__743a5.autocomplete__2e602.autocompleteAttached__5d2a6, .autocomplete__743a5.autocomplete__2e602.autocompleteAttached__5d2a6, .scroller__3fc84.thin__62e51.scrollerBase__65223  {
+  backdrop-filter: blur(15px) !important;
+}
 
 .button_bfb8e1 {
   background-color: rgba(106, 151, 255, 0.226) !important;
@@ -739,7 +739,8 @@
 .item__183e8:hover,
 .container__3be1d:hover,
 .link_ddbb36:hover,
-.modeSelected__473f1 .link_ddbb36 {
+.modeSelected__473f1 .link_ddbb36,
+.button__581d0.lookFilled__950dd.colorBrand__27d57.sizeMedium__60c12.fullWidth_fdb23d.grow__4c8a4:hover {
   background: rgba(106, 151, 255, 0.526) !important;
   box-shadow: 0 4px 30px rgba(0, 255, 238, 0.1);
   box-shadow: inset 0px 0px 5px rgba(148, 246, 255, 0.613);
@@ -872,7 +873,8 @@
 .scroller_a9a4b4,
 .container_eb737e,
 .reaction__4a43f,
-.jumpToPresentBar__69174 {
+.jumpToPresentBar__69174,
+.popout__08442.root_a28985.small_f8e677.fullscreenOnMobile__05784.rootWithShadow_d20cd6 {
   background-color: transparent !important;
   border: 1.5px solid rgba(148, 246, 255, 0.3);
   background: rgba(106, 151, 255, 0.2);
@@ -907,7 +909,8 @@
 
 
 .searchBar__310d8,
-.scrollableContainer_ff917f {
+.scrollableContainer_ff917f,
+.button__581d0.lookFilled__950dd.colorBrand__27d57.sizeMedium__60c12.fullWidth_fdb23d.grow__4c8a4 {
   border: 1.5px solid rgba(148, 246, 255, 0.3);
   background: rgba(106, 151, 255, 0.2);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
